feat: 添加仪表板，历史，统计，设置页面和实现交易管理功能
-实现仪表板页面与每月收入，支出和余额统计。

-创建历史页面，用于查看和管理具有搜索和过滤功能的交易记录。

-开发统计页面，显示每月趋势和费用类别。

—增加数据管理的“设置”页面，包括数据导出和清除选项。

-为应用程序中的新页面引入路由。

增加了动画的实用函数和类别和路由的常量。

-为交易和类别创建类型，提高类型安全性。

-实现一个简单的测试应用程序来验证功能。

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ww-bookkeeping",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "dist-electron/main/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite --host",
+    "dev:electron": "vite",
+    "build": "tsc -b && vite build && electron-builder",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,16 +17,26 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.19.1",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.523.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/node": "^24.0.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.5.2",
     "electron": "^37.0.0",
+    "electron-builder": "^26.0.12",
     "electron-updater": "^6.6.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
